--- a/index.html
+++ b/index.html
@@ -1,175 +1,1 @@
-<html>
-  <meta property="og:title" content="Bitcoin Swear Jar" />
-  <meta property="og:description" content="You Say, You Pay" />
-  <meta property="og:image" content="images/logo.png" />
-
-<head>
-
-  <link rel="stylesheet" type="text/css" href="style/base.css">
-
-  <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-  <script
-    src="http://code.jquery.com/jquery-3.1.0.js"
-    integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk="
-    crossorigin="anonymous">
-  </script>
-
-  <script src="js/qr.js"></script>
-  <script src="js/words.js"></script>
-  <script>
-    var usd_conv = 615.85;
-    var fee_quarter = 0.25 / usd_conv;
-    fee_quarter = Math.round(fee_quarter * 1000000) / 1000000;
-    var wallet ='1F9XtK3RumBejAsRBcaBc1Nt5aHwuSVqm6';
-
-    window.onload = function() {
-      setupqr();
-      doqr('bitcoin:' + wallet + '?amount=' + fee_quarter);
-    };
-
-    $("document").ready(function() {
-
-      setfee(0);
-
-      $('#phrase').bind('change keyup', function () {
-          calculate();
-      });
-
-      $('#phrase').click(function(){
-          wordsArriving();
-          //$(this).val('');
-          //$(this).css('color','#260b01');
-          //$(this).css('font-weight','bold');
-      });
-
-      $('#pay').click(function(){
-        _gaq.push(['_trackEvent', 'swear', $('#phrase').val() ]);
-      });
-
-      $('#phrase').focus();
-
-      $('#phrase').keydown(function() {
-	if ($(this).val() == 'Talk Dirty to Me') {
-	  wordsArriving();
-        }
-      });
-
-    });
-
-    function wordsArriving() {
-      $('#phrase').val('').css('color','#260b01').css('font-weight','bold');
-    };
-
-    function c(string, word) {
-       word = word.toLowerCase();
-       var substrings = string.split(word);
-       return substrings.length - 1;
-    }
-
-    function setfee(usd) {
-      var html;
-      usd = usd || 0.25;
-      var btc = usd / usd_conv;
-      var mbtc = btc * 1000;
-
-
-      var disp = mbtc.toFixed(2)  + ' mbtc<br>$' + usd.toFixed(2);
-
-      if (usd == 0.25) { //default fee processing
-        disp += '<div id="default">(Default Fee)</div> ';
-      }
-
-      $('#fee').html( disp);
-
-      html = 'bitcoin:' + wallet + '?amount=' + btc.toFixed(8);
-
-      $('#pay').attr('href', html);
-      doqr(html);
-
-    }
-
-  </script>
-
-<div id="header">
-  <div id="title">
-     <img src="images/logo.png"/>
-     Bitcoin Swear Jar
-  </div>
-</div>
-
-
-<div id="middlebar">
-  <div id="middlebartext">
-    Pay for What You Say
-  </div>
-</div>
-
-<div id="main">
-<div id="content">
-
-  <textarea type="text" id="phrase" size="50" lines="2">Talk Dirty to Me</textarea>
-
-  <a id="pay">
-    <span id="fee"></span>
-  </a>
-
-  <span id="qrdiv">
-
-    <canvas id="qrcanv"></canvas>
-  </span>
-
-<h2 id="directions">
-  Click the amount or scan the QR to pay with Bitcoin
-</h2>
-
-<br>
-
-Wallet address: <script>document.write(wallet);</script>
-
-<br><br>
-
-<div>
-All proceeds will be used for charity - like the <a href="http://westutter.org">National Stuttering Association</a> or <a href="http://www.self-help.org.uk/directory/speech-disorders/"> another speech disorder charity</a>.<br>
-Proof of charity will be auditable via correlation between <a href="https://blockchain.info/address/1F9XtK3RumBejAsRBcaBc1Nt5aHwuSVqm6">block chain of this address</a> and published receipt from chairty.
-I plan to group the donations per bitcoin, i.e. once we get a full bitcoin I will make a donation. Got a better idea? <a href="mailto:msheppard@gmail.com?subject=Bitcoin Swearjar">Feedback</a>
-</div>
-
-<!-- Sorry... I'm using BR here... I'll make a style sheet soon I swear (pun intended) -->
-
-<br>
-
-</div>
-
-<div id="middlebar">
-
-<div id="middlebartext">
-  <div id="footer">
-  This is v1.0 of the site<br>
-  Soliciting and responding to feedback from <a href="http://reddit.com/r/bitcoin">/r/bitcoin</a> <br>
-  <a href="http://www.reddit.com/r/Bitcoin/comments/1e5ar6/just_built_this_bitcoinswearjar_looking_for/">Alpha announcement</a> : 2013/05/11 <br>
-  <a href="http://redd.it/1fgvs1">Beta announcement</a> : 2013/06/01 <br>
-  <a href="https://www.reddit.com/r/Bitcoin/comments/515hwn/bitcoin_swear_jar_v10_feedback_welcome/">Version 1.0 announcement</a> 2016/09/03 <br>
-
-  <a href=""
-  </div>
-</div>
-
-</div>
-
-<script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-6617028-4']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
-
-<a href="https://github.com/mampersat/BitcoinSwearJar"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
-
-</html>
+Hello World
