--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 
   <link rel="stylesheet" type="text/css" href="style/base.css">
 
-  <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
   <script
-    src="http://code.jquery.com/jquery-3.1.0.js"
+    src="https://code.jquery.com/jquery-3.1.0.js"
     integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk="
     crossorigin="anonymous">
   </script>
