--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
     var usd_conv = 7325.49;
     var fee_quarter = 0.25 / usd_conv;
     fee_quarter = Math.round(fee_quarter * 1000000) / 1000000;
-    var wallet ='1F9XtK3RumBejAsRBcaBc1Nt5aHwuSVqm6';
+
+    // Leave wallet addresses for auditability
+    //var wallet ='1F9XtK3RumBejAsRBcaBc1Nt5aHwuSVqm6';
+    var wallet = '15Lg1H9aDKwc77V8WuvfQygGHZuX5MzZKf';
 
     window.onload = function() {
       setupqr();
